# Fall2023_ECE312_Projects

./: README.md
Project 1 SuperStrings/Project1_starter_files/Project1_starter_files/: Project1.cpp  main.cpp
Project 2 String ADT/: Project3.cpp  Test Cases.txt  main.cpp
Project 4 CRM/: MyString.cpp  Project4.cpp  main.cpp
Project 4 Set ADT/Project5_starter_files/: Project5.cpp  main.cpp
Project 5 Recursion/: Project6.cpp  main.cpp
Project 6 CRM in C++/: CMakeLists.txt  main.cpp
Project 6 CRM in C++/ActualGradedFile/: Project7.cpp
Project 6 CRM in C++/Graded/: CustomerDB.cpp
Project 7 InterpreterA/Project 7 InterpreterA/: CMakeLists.txt  ExpTree.cpp  ExpTree.h  VariableTracker.cpp  VariableTracker.h  a.out  main.cpp  test2.blip  test4.blip  test5.blip  test6.blip
Project 7 InterpreterA/grading/: brief_results.csv
